# file-gen-cli-tutorial-series

./: .env  Cargo.toml  mydata.txt
part01/: Cargo.toml
part02/: Cargo.toml
part02/src/: cli.rs  lib.rs  main.rs  main_original.rs  template.rs  writer.rs
part02/src/tests/: integration.rs
src/: main.rs
tutorial/: part1.md  part2.md
